# hermeneutic-cpp-test-scratchpad

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CRAP.md  README.md  package.json  xxx.txt
.devcontainer/: Dockerfile  devcontainer.json
config/: aggregator.docker.json  aggregator.json
data/: binance.ndjson  coinbase.ndjson  kraken.ndjson  notbinance.ndjson  notcoinbase.ndjson  notkraken.ndjson
docker/: Dockerfile.aggregator  Dockerfile.aggregator.alpine  Dockerfile.base.alpine  Dockerfile.bbo  Dockerfile.bbo.alpine  Dockerfile.cex  Dockerfile.cex.alpine  Dockerfile.price  Dockerfile.price.alpine  Dockerfile.volume  Dockerfile.volume.alpine  compose.yml  entrypoint_aggregator.sh
docs/: ccache.md  docker_run.md  vscode-debug.md
docs/protocol_diffs/: binance.md  coinbase.md  kraken.md
instructions/: aggregator.md  build-and-test-scripts.md  ccache.md  csv_fix_plan.txt  data_fix_plan.txt  extension.h  finish_cex.md  fix1.md  fix2.md  fix_aggregation.md  fix_lob.md  init.md  output_fix.txt  polish.md  proper_cex_protocol.md  proper_decimal.md  todo.txt  traceability.md  xxx.txt
proto/: CMakeLists.txt  aggregator.proto  xxx.txt
scripts/: compile.sh  compile_debug.sh  docker_build.sh  docker_run.sh  generate_demo_data.py  run_ctest_coverage.sh  run_ctest_debug.sh  run_ctest_debug_asan.sh  run_ctest_debug_tsan.sh  run_docker_stack_once.sh  run_local_stack.sh  run_local_stack_coverage.sh  run_local_stack_debug.sh  run_local_stack_debug_asan.sh  run_local_stack_debug_tsan.sh  run_local_stack_linux.sh  run_local_stack_once.sh  run_local_stack_once_coverage.sh  run_local_stack_once_debug.sh  run_local_stack_once_debug_asan.sh  run_local_stack_once_debug_tsan.sh  run_local_stack_once_linux.sh  validate_csv.py
scripts/support/: build_variants.sh
services/: CMakeLists.txt
services/aggregator_service/: CMakeLists.txt  feed_wait.cpp  feed_wait.hpp  main.cpp
services/bbo_service/: CMakeLists.txt  main.cpp
services/cex_type1_service/: CMakeLists.txt  main.cpp
services/common/: CMakeLists.txt  book_stream_client.cpp  book_stream_client.hpp  csv_utils.cpp  csv_utils.hpp  grpc_helpers.hpp
services/price_bands_service/: CMakeLists.txt  main.cpp
services/volume_bands_service/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/aggregator/: CMakeLists.txt  aggregator.cpp  grpc_service.cpp
src/aggregator/include/hermeneutic/aggregator/: aggregator.hpp  config.hpp  grpc_service.hpp
src/bbo/: CMakeLists.txt  bbo_publisher.cpp
src/bbo/include/hermeneutic/bbo/: bbo_publisher.hpp
src/cex_type1/: CMakeLists.txt  feed.cpp
src/cex_type1/include/hermeneutic/cex_type1/: feed.hpp
src/common/: assert.cpp  decimal.cpp  enum.cpp  events.cpp
src/common/include/hermeneutic/common/: assert.hpp  concurrent_queue.hpp  decimal.hpp  enum.hpp  events.hpp
src/lob/: CMakeLists.txt  order_book.cpp
src/lob/include/hermeneutic/lob/: order_book.hpp
src/price_bands/: CMakeLists.txt  price_bands_publisher.cpp
src/price_bands/include/hermeneutic/price_bands/: price_bands_publisher.hpp
src/volume_bands/: CMakeLists.txt  volume_bands_publisher.cpp
src/volume_bands/include/hermeneutic/volume_bands/: volume_bands_publisher.hpp
tests/: CMakeLists.txt
tests/aggregator/: test_aggregator.cpp  test_aggregator_service_exec.cpp  test_feed_wait.cpp  test_grpc_service.cpp
tests/bbo/: test_bbo_publisher.cpp
tests/cex_type1/: test_cex_type1_service.cpp  test_loopback.cpp  test_reconnect.cpp
tests/common/: test_decimal.cpp  test_enum.cpp  test_sanitizer_demos.cpp
tests/include/: doctest_config.hpp
tests/lob/: test_order_book.cpp  xxx.txt
tests/price_bands/: test_price_bands.cpp
tests/services/: test_book_stream_client.cpp  test_csv_utils.cpp  test_grpc_helpers.cpp  test_publishers.cpp  test_service_entrypoints.cpp
tests/support/: test_data_factory.hpp
tests/volume_bands/: test_volume_bands.cpp
