function(add_project_test target)
  cmake_parse_arguments(TGT "" "" "SOURCES;LIBS" ${ARGN})
  add_executable(${target} ${TGT_SOURCES})
  target_link_libraries(${target} PRIVATE third_party_doctest common ${TGT_LIBS})
  add_test(NAME ${target} COMMAND ${target})
endfunction()

add_project_test(test_decimal SOURCES common/test_decimal.cpp)
add_project_test(test_order_book SOURCES lob/test_order_book.cpp LIBS lob)
add_project_test(test_aggregator SOURCES aggregator/test_aggregator.cpp LIBS aggregator)
